<resources>
    <string name="app_name">GSHINDI</string>
    <string name="action_settings">Settings</string>
    <string name="option_1">Option1</string>
    <string name="option_2">Option2</string>
    <string name="option_3">Option3</string>
    <string name="option_4">Option4</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Skip</string>
    <string name="title_activity_question_set">QuestionSetActivity</string>
</resources>
