<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.gshindi.android.gshindi.HomeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp">
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/seconds_remaining"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"/>
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/quesion_text"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"/>
        <CheckBox
            android:id="@+id/option_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_1" />

        <CheckBox
            android:id="@+id/option_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_2"/>

        <CheckBox
            android:id="@+id/option_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_3" />
        <CheckBox
            android:id="@+id/option_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_4" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous_button"
                android:id="@+id/previous_button"
                android:layout_marginLeft="52dp"
                android:layout_marginStart="52dp"
                android:layout_marginBottom="50dp"
                android:layout_alignTop="@+id/next_button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/next_button"
                android:id="@+id/next_button"
                android:layout_marginRight="56dp"
                android:layout_marginEnd="56dp"
                android:layout_marginBottom="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            />

    </LinearLayout>




</android.support.design.widget.CoordinatorLayout>
